hw06 profile and stories

--- a/lab09/src/index.css
+++ b/lab09/src/index.css
@@ -236,7 +236,7 @@ main {
     border: solid 1px #dbdbdb;
     border-radius: 15px;
 }
-aside header > div {
+aside header {
     display: flex;
     align-items: center;
     width: 25vw;
